packages/comannds/src/domains/ebook_snapshots/snapshots/comannds__domains__ebook_snapshots__repositories__tests__get-2.snap
---
source: packages/comannds/src/domains/ebook_snapshots/repositories.rs
expression: actual.payment_real
---
Some(
    Payment {
        price: "3520",
        points: "106",
    },
)
