packages/comannds/src/domains/ebook_snapshots/snapshots/comannds__domains__ebook_snapshots__repositories__tests__get.snap
---
source: packages/comannds/src/domains/ebook_snapshots/repositories.rs
expression: actual.payment_ebook
---
Some(
    Payment {
        price: "3344",
        points: "101",
    },
)
